feat(ddd): aggregate-first blog rebuild + dual-track removal + architecture guards
Phase 1 wrap-up:
- example-task ported to api/port CurrentUserPort; Modulith whitelists use
  named-interface syntax (example-task :: api)
- Gradle checkModuleDependencies guard wired into domain modules' check
- ArchUnit rule 2 (no reverse dependencies) unfrozen after 39 violations
  fixed; rule 10 admits Infrastructure as legal Domain visitor (DIP)

Phase 2:
- blog: aggregate root BlogArticle with ArticleTitle/ArticleSlug value
  objects; state machine DRAFT->PUBLISHED->OFFLINE guarded by canTransitionTo
- repository split: domain port ArticleRepository + JPA impl (static
  metamodel) + in-memory impl for tests
- BlogArticleApplicationService replaces internal impl; update() syncs
  content only, state changes go through publish()/offline()
- BlogDbConfig moved to infrastructure/config; scans both repository
  generations (category stays legacy until phase 4)
- server-admin/server-web rebuilt on aggregate factories; MapStruct maps
  value objects explicitly; DashboardService consumes BlogArticleService
- Modulith whitelists extended with blog :: domain
- 42 blog tests added; dead Spec and fake tests removed